--- a/card.html
+++ b/card.html
@@ -122,7 +122,7 @@
       <!-- Kartu Happy Birthday -->
       <div class="col-md-5 mb-4">
         <div class="card">
-          <img src="/hbd.jpg" class="card-img-top" alt="Birthday">
+          <img src="hbd.jpg" class="card-img-top" alt="Birthday">
           <div class="card-body">
             <h2 class="title">Happy Birthday, Cantikku 🎂</h2>
             <p class="message">
@@ -137,7 +137,7 @@
       <!-- Kartu Happy Wedding -->
       <div class="col-md-5 mb-4">
         <div class="card">
-          <img src="/hwd.jpg" class="card-img-top" alt="Wedding">
+          <img src="hwd.jpg" class="card-img-top" alt="Wedding">
           <div class="card-body">
             <h2 class="title">Happy Wedding Anniversary💍</h2>
             <p class="message">
