--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <canvas id="heart" style="display: none;"></canvas>
         <h1 id='greeting' class="mt-5 mb-3 title">Ucapan Spesial Untuk Cantikku 💖</h1>
         <button id="openBtn" class="btn btn-danger btn-lg">Open ✨</button>
-        <audio id="bgMusic" src="/music.mp3" preload="auto"></audio>
+        <audio id="bgMusic" src="music.mp3" preload="auto"></audio>
         <!--JavaScript-->
         <script src="script.js"></script>
   </body>
