--- a/index.html
+++ b/index.html
@@ -29,17 +29,18 @@
         margin-left: 20px;
         border-radius: 10px;
         position: absolute;
+        width: 250px;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);   
         }
         .title {
       font-family: 'Great Vibes', cursive;
-      font-size: 2.2rem;
+      font-size: 3rem;
       color: #d63384;
       position: absolute;
       left: 50%;
-      top: 30%;
+      top: 34%;
       transform: translate(-50%, -50%); 
       
     }
@@ -48,7 +49,7 @@
   </head>
   <body>  
         <canvas id="heart" style="display: none;"></canvas>
-        <h1 id='greeting' class="mt-5 mb-3 title">Ucapan Spesial Untuk Cantikku 💖</h1>
+        <h1 id='greeting' class="mt-5 mb-3 title">For You💖</h1>
         <button id="openBtn" class="btn btn-danger btn-lg">Open ✨</button>
         <audio id="bgMusic" src="music.mp3" preload="auto"></audio>
         <!--JavaScript-->
